# textual-system-monitor

./: .gitignore  CONTRIBUTING.md  EXAMPLES.md  Examples.md  Justfile  LICENSE.md  Makefile  Pipfile  README.md  THEMES.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/workflows/: build-and-publish.yml  system-monitor.yml
src/: app.py  cpu.py  css.tcss  drives.py  guide_css.tcss  guide_screen.py  main.py  main_screen.py  memory.py  network.py  processes.py  stats.py  utilities.py  utils.py
src/panes/: cpu.py  drives.py  gpu.py  memory.py  network.py  processes.py  stats.py
src/screens/: cpu_screen.py  drive_screen.py  gpu_screen.py  guide_screen.py  main_screen.py  mem_screen.py  network_screen.py  processes_screen.py
src/styles/: cpu_css.tcss  drive_css.tcss  gpu_css.tcss  guide_css.tcss  main_css.tcss  mem_css.tcss  network_css.tcss  processes_css.tcss
src/textual_system_monitor/: __init__.py  app.py
src/textual_system_monitor/panes/: drives.py  gpu.py  memory.py  network.py  processes.py  stats.py
src/textual_system_monitor/screens/: cpu_screen.py  drive_screen.py  gpu_screen.py  guide_screen.py  main_screen.py  mem_screen.py  network_screen.py  processes_screen.py
src/textual_system_monitor/styles/: cpu_css.tcss  guide_css.tcss  processes_css.tcss
src/widgets/: screens.py
test/: test_bytes.py  test_percent_color.py
tests/: test_buttons.py  test_bytes.py  test_clicks.py  test_functions.py  test_keys.py  test_misc.py  test_percent_color.py
