[project]
name = "textual-system-monitor"
version = "1.0.6"
description = "A simple system monitor in Python, using Textual"
readme = "README.md"
authors = [{ name = "BlackSound1" }]
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
keywords = ["python", "textual", "tui", "uv", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]
dependencies = [
    "psutil>=6.0.0",
    "textual==8.2.3",
    "wmi==1.5.1 ; sys_platform == 'win32'",
]

[project.urls]
Repository = "https://github.com/BlackSound1/textual-system-monitor"

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.9",
    "textual-dev==1.8.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "E501", # Enable line-too-long rule
    "UP",   # Enable pyupgrade rules
    "W",    # Enable pycodestyle warnings
    "C90",  # Enable McCabe complexity
    "B",    # Enable flake8-bugbear rules
    "A",    # Enable flake8-builtin rules
    "COM",  # Enable flake8-commas rules
    "C4",   # Enable flake8-comprehensions rules
    "ISC",  # Enable flake8-implicit-str-concat rules
    "ICN",  # Enable flake8-import-conventions rules
    "PIE",  # Enable flake8-pie rules
    "PT",   # Enable flake8-pytest-style rules
    "RET",  # Enable flake8-return rules
    "ARG",  # Enable flake8-unused-arguments rules
    "F",    # Enable Pyflakes rules
    "FURB", # Enable refurb rules
    "PERF", # Enable Perflint rules
    "RUF",  # Enable Ruff specific rules
    "SIM",  # Enable flake8-simplify rules
    "Q",    # Enable flake8-quotes rules
    "I",    # Enable isort rules

    # Unused rules for now:

    # "TC", # flake8-type-checking
    # "DOC", # pydoclint
    # "PL", # Pylint
]

ignore = [
    "COM812", # Ignore absence of trailing commas. Formatter handles that
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tsm = "textual_system_monitor:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://upload.pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true
